fix sidebar layout problem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,7 +87,7 @@
 }
 
 .sidebar-nav li a {
-    display: block;
+  
     text-decoration: none;
     color: #999999;
 }
