--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -139,7 +139,7 @@
 .card__back {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  -webkit-transition: -webkit-transform 0.3s;
+  -webkit-transition: -webkit-transform 0.5s;
           transition: transform 0.3s;
 }
 
